if user is login my account in toolbar appear and login button disappear

--- a/src/app/bookingform/bookingform.component.html
+++ b/src/app/bookingform/bookingform.component.html
@@ -10,10 +10,9 @@
               <button mat-menu-item routerLink="/menu_tv">Television</button>
             </mat-menu>
 
-            <label class="pricingBtn" routerLink="/pricing">Pricing</label>
-            <label class="contactUsBtn" routerLink="/contact_us">Contact Us</label>
-            <label class="aboutusBtn" routerLink="/about_us">About Us</label>
-            <label class="aboutusBtn" routerLink="/dashboard">My Account</label>          
+            <label class="toolbarBtn" routerLink="/pricing">Pricing</label>
+            <label class="toolbarBtn" routerLink="/contact_us">Contact Us</label>
+            <label class="toolbarBtn" routerLink="/about_us">About Us</label>       
   </mat-toolbar>   
 
     
