--- a/src/app/bookingform/bookingform.component.css
+++ b/src/app/bookingform/bookingform.component.css
@@ -2,10 +2,9 @@
 {
 
   
-mat-toolbar
-{
-  width: 100%;
-  height: 10%;
+  .mat-toolbar{
+    width: 100%;
+    height: 80px;
 }
 
 .logo
@@ -32,62 +31,31 @@ mat-toolbar
 }
 
 .menuBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #003049;
-    font-size: 17px;
-    float: left;
-    margin: 30px;
-    margin-top: 40px;
-}
-
-.menuBtn:hover, .menuBtn:active {
-    color:#dd0346;
-}
-
-.pricingBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #003049;
-    float: left;
-    margin: 30px;
-    margin-top: 40px;
-    font-size: 17px;
+    {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
+    }
     
-}
-
-
-.pricingBtn:hover, .pricingBtn:active {
-    color:#dd0346;
-}
-
-.contactUsBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #003049;
-    font-size: 17px;
-    float: left;
-    margin: 30px;
-    margin-top: 40px;
-}
-
-.contactUsBtn:hover, .contactUsBtn:active {
-    color:#dd0346;
-}
-
-.aboutusBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #003049;
-    font-size: 17px;
-    float: left;
-    margin: 30px;
-    margin-top: 40px;
-}
-
-.aboutusBtn:hover, .aboutusBtn:active {
-    color:#dd0346;
-}
+    .menuBtn:hover, .menuBtn:active {
+        color:#dd0346;
+    }
+    .toolbarBtn
+    {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
+        font-size: 17px;
+    }
+    
+    .toolbarBtn:hover, .toolbarBtn:active {
+        color:#dd0346;
+    }
 
 .spacer{
     flex: 1 1 auto;
