--- a/src/app/loginform/loginform.component.css
+++ b/src/app/loginform/loginform.component.css
@@ -2,16 +2,30 @@
 {
     
     .logo{
-
-        width: 300px !important;
-        height: 110px !important;
-        margin-top: 25px !important;
+        max-width: 200px;
+        height: 100px !important;
+        margin-left: 30px !important;
+        margin-top: 20px !important;
       }
       .spacer{
         flex: 1 1 auto;
       }
     .mat-toolbar{
         width: 100%;
+        height: 80px;
+    }
+    .menuBtn
+    {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
+    }
+    
+    .menuBtn:hover, .menuBtn:active {
+        color:#dd0346;
     }
     .toolbarBtn
     {
