--- a/src/app/menu-fan/menu-fan.component.html
+++ b/src/app/menu-fan/menu-fan.component.html
@@ -1,22 +1,27 @@
 <body>
     <mat-toolbar>
         <img class="logo" mat-card-image src="../../assets/mainlogo.png" routerLink="/home">
-              <label class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon></label> 
-                  <mat-menu #menu="matMenu">
-                    <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
-                    <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
-                    <button mat-menu-item routerLink="/menu_fan">Electric Fan</button>
-                    <button mat-menu-item routerLink="/menu_washing">Washing Machine</button>
-                    <button mat-menu-item routerLink="/menu_tv">Television</button>
-                  </mat-menu>
-  
-                  <label class="toolbarBtn" routerLink="/pricing">Pricing</label>
-                  <label class="toolbarBtn" routerLink="/contact_us">Contact Us</label>
-                  <label class="toolbarBtn" routerLink="/about_us">About Us</label>
-                  
-                  <span class="spacer"></span>
-                    <button mat-raised-button class="loginBtn" routerLink="/login">Login / Sign Up</button>           
-        </mat-toolbar>      
+        <label class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon></label>
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
+            <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
+            <button mat-menu-item routerLink="/menu_fan">Electric Fan</button>
+            <button mat-menu-item routerLink="/menu_washing">Washing Machine</button>
+            <button mat-menu-item routerLink="/menu_tv">Television</button>
+        </mat-menu>
+
+        <label class="toolbarBtn" routerLink="/pricing">Pricing</label>
+        <label class="toolbarBtn" routerLink="/contact_us">Contact Us</label>
+        <label class="toolbarBtn" routerLink="/about_us">About Us</label>
+        <div *ngIf="token != null; else notLogin">
+            <label class="toolbarBtn" routerLink="/dashboard">My Account</label>
+        </div>
+        <ng-template #notLogin></ng-template>
+        <span class="spacer"></span>
+        <div *ngIf="token != null; else notLogin1"></div>
+        <ng-template #notLogin1><button mat-raised-button class="loginBtn" routerLink="/login">Login / Sign Up</button>
+        </ng-template>
+    </mat-toolbar>
 
     <div>
         <mat-card>
