--- a/src/app/reschedule/reschedule.component.css
+++ b/src/app/reschedule/reschedule.component.css
@@ -62,19 +62,16 @@ p
     margin-left: 20px;
     margin-top: 70px;
 }
-
-
-.mat-stroked-button
-{
-    border-color: #FCA311;
-    width: 180px;
-    height: 60px;
-}
-
-  
 .tech1Btn
   {
-  margin-top: -110px;
+    width: 170px;
+    height: 50px;
+    margin: 10px;
+    margin-top: -110px;
+    border-style: solid;
+    border-width: thin;
+    border-color: #FCA311 !important;
+    color: black !important;
   }
   
   .h1technicians
@@ -215,21 +212,17 @@ p
     .time{
       color: black;
     }
-    
-    
-    .mat-stroked-button
-    {
-        border-color: #FCA311;
-        width: 180px;
-        height: 60px;
-    }
-    
-      
     .tech1Btn
       {
-      margin-top: -100px;
+        width: 180px;
+        height: 40px;
+        margin: 10px;
+        /* margin-top: -110px; */
+        border-style: solid;
+        border-width: thin;
+        border-color: #FCA311 !important;
+        color: black !important;
       }
-      
       
       .h1technicians
       {
