--- a/src/app/appliances/appliances.component.css
+++ b/src/app/appliances/appliances.component.css
@@ -1,9 +1,9 @@
 @media (min-width: 820px)
 {
-  mat-toolbar
+  .mat-toolbar
   {
     width: 100%;
-    height: 10%;
+    height: 80px;
   }
   
   .logo
