--- a/src/app/bookingform/bookingform.component.html
+++ b/src/app/bookingform/bookingform.component.html
@@ -1,6 +1,5 @@
 <mat-toolbar>
   <img class="logo" mat-card-image src="../../assets/mainlogo.png" routerLink="/home">
-        <label class="homeBtn" routerLink="/dashboard">Home</label>
         <label class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon></label> 
             <mat-menu #menu="matMenu">
               <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
@@ -12,10 +11,9 @@
 
             <label class="toolbarBtn" routerLink="/pricing">Pricing</label>
             <label class="toolbarBtn" routerLink="/contact_us">Contact Us</label>
-            <label class="toolbarBtn" routerLink="/about_us">About Us</label>       
+            <label class="toolbarBtn" routerLink="/about_us">About Us</label>    
+            <label class="toolbarBtn" routerLink="/dashboard">Home</label>  
   </mat-toolbar>   
-
-    
     <!--Appliances Repair-->
       <h1 class="h1serviceneed">What service do you need?</h1>
     <div class="allservices">
