--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
- <!--<router-outlet></router-outlet>-->
-<app-bookingsummary></app-bookingsummary>
+<router-outlet></router-outlet>
+ <!--<app-loginform></app-loginform>-->
